--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -34,8 +34,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/imgView"
-                        android:src="@drawable/co_bong_lau" />
+                        android:id="@+id/imgView" />
                 </LinearLayout>
             </ScrollView>
 
