--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -54,7 +54,9 @@
                     android:text="1"
                     android:id="@+id/btn_1"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom" />
+                    android:background="@drawable/button_custom"
+                    android:fontFamily="sans-serif-medium"
+                    android:textSize="30dp" />
 
                 <Button
                     android:layout_width="0dp"
@@ -64,7 +66,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/button_custom"
                     android:focusable="false"
-                    android:enabled="true" />
+                    android:enabled="true"
+                    android:fontFamily="sans-serif-medium"
+                    android:textSize="30dp" />
 
                 <Button
                     android:layout_width="0dp"
@@ -72,7 +76,9 @@
                     android:text="3"
                     android:id="@+id/btn_3"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom" />
+                    android:background="@drawable/button_custom"
+                    android:fontFamily="sans-serif-medium"
+                    android:textSize="30dp" />
 
             </LinearLayout>
 
@@ -90,7 +96,9 @@
                     android:text="4"
                     android:id="@+id/btn_4"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom" />
+                    android:background="@drawable/button_custom"
+                    android:fontFamily="sans-serif-medium"
+                    android:textSize="30dp" />
 
                 <Button
                     android:layout_width="0dp"
@@ -99,7 +107,9 @@
                     android:id="@+id/btn_5"
                     android:layout_weight="1"
                     android:background="@drawable/button_custom"
-                    android:enabled="true" />
+                    android:enabled="true"
+                    android:fontFamily="sans-serif-medium"
+                    android:textSize="30dp" />
 
                 <Button
                     android:layout_width="0dp"
@@ -107,7 +117,9 @@
                     android:text="6"
                     android:id="@+id/btn_6"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom" />
+                    android:background="@drawable/button_custom"
+                    android:fontFamily="sans-serif-medium"
+                    android:textSize="30dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -124,7 +136,9 @@
                     android:text="7"
                     android:id="@+id/btn_7"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom" />
+                    android:background="@drawable/button_custom"
+                    android:fontFamily="sans-serif-medium"
+                    android:textSize="30dp" />
 
                 <Button
                     android:layout_width="0dp"
@@ -132,7 +146,9 @@
                     android:text="8"
                     android:id="@+id/btn_8"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom" />
+                    android:background="@drawable/button_custom"
+                    android:fontFamily="sans-serif-medium"
+                    android:textSize="30dp" />
 
                 <Button
                     android:layout_width="0dp"
@@ -140,7 +156,9 @@
                     android:text="9"
                     android:id="@+id/btn_9"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom" />
+                    android:background="@drawable/button_custom"
+                    android:fontFamily="sans-serif-medium"
+                    android:textSize="30dp" />
             </LinearLayout>
         </LinearLayout>
 
