--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.lthien.hoclichsu.activities.GameActivity">
+    tools:context="com.lthien.hoclichsu.activities.GameActivity"
+    android:background="@drawable/background_yellow">
 
     <LinearLayout
         android:orientation="vertical"
@@ -169,19 +170,27 @@
             android:layout_weight="2.5"
             android:gravity="center">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Trả lời nhanh"
-                android:id="@+id/btnAnswer"
-                android:layout_gravity="center_horizontal" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_marginTop="30dp">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Chịu thua"
-                android:id="@+id/btnEndGame"
-                android:layout_gravity="right" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Trả lời nhanh"
+                    android:id="@+id/btnAnswer"
+                    android:layout_gravity="center_horizontal" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Chịu thua"
+                    android:id="@+id/btnEndGame"
+                    android:layout_gravity="right" />
+            </LinearLayout>
 
         </LinearLayout>
 
