--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -55,7 +55,7 @@
                     android:text="1"
                     android:id="@+id/btn_1"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom"
+                    android:background="@drawable/button_1_custom"
                     android:fontFamily="sans-serif-medium"
                     android:textSize="30dp" />
 
@@ -65,7 +65,7 @@
                     android:text="2"
                     android:id="@+id/btn_2"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom"
+                    android:background="@drawable/button_2_custom"
                     android:focusable="false"
                     android:enabled="true"
                     android:fontFamily="sans-serif-medium"
@@ -77,7 +77,7 @@
                     android:text="3"
                     android:id="@+id/btn_3"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom"
+                    android:background="@drawable/button_3_custom"
                     android:fontFamily="sans-serif-medium"
                     android:textSize="30dp" />
 
@@ -97,7 +97,7 @@
                     android:text="4"
                     android:id="@+id/btn_4"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom"
+                    android:background="@drawable/button_4_custom"
                     android:fontFamily="sans-serif-medium"
                     android:textSize="30dp" />
 
@@ -107,7 +107,7 @@
                     android:text="5"
                     android:id="@+id/btn_5"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom"
+                    android:background="@drawable/button_5_custom"
                     android:enabled="true"
                     android:fontFamily="sans-serif-medium"
                     android:textSize="30dp" />
@@ -118,7 +118,7 @@
                     android:text="6"
                     android:id="@+id/btn_6"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom"
+                    android:background="@drawable/button_6_custom"
                     android:fontFamily="sans-serif-medium"
                     android:textSize="30dp" />
             </LinearLayout>
@@ -137,7 +137,7 @@
                     android:text="7"
                     android:id="@+id/btn_7"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom"
+                    android:background="@drawable/button_7_custom"
                     android:fontFamily="sans-serif-medium"
                     android:textSize="30dp" />
 
@@ -147,7 +147,7 @@
                     android:text="8"
                     android:id="@+id/btn_8"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom"
+                    android:background="@drawable/button_8_custom"
                     android:fontFamily="sans-serif-medium"
                     android:textSize="30dp" />
 
@@ -157,7 +157,7 @@
                     android:text="9"
                     android:id="@+id/btn_9"
                     android:layout_weight="1"
-                    android:background="@drawable/button_custom"
+                    android:background="@drawable/button_9_custom"
                     android:fontFamily="sans-serif-medium"
                     android:textSize="30dp" />
             </LinearLayout>
